--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "the-littlest-cloud",
   "homepage": "https://github.com/ThirstyHead/the-littlest-cloud",
+  "version": "1.0.0",
   "authors": [
     "Scott Davis <scott@thirstyhead.com>"
   ],
